# practic

./: .gitignore  AGENT.md  README.md  Run.toml
c/: Run.toml
rust/rsprogramminginth/: Cargo.toml
rust/rsprogramminginth/AplusB/: Cargo.toml
rust/rsprogramminginth/Ochafood/: Cargo.toml
rust/rsprogramminginth/Toppykung/: Cargo.toml
rust/rsprogramminginth/brick/: Cargo.toml
rust/rsprogramminginth/circle_in_square/: Cargo.toml
rust/rsprogramminginth/fptrick/: Cargo.toml
rust/rsprogramminginth/grading/: Cargo.toml
rust/rsprogramminginth/jelly/: Cargo.toml
rust/rsprogramminginth/lightflight/: Cargo.toml
rust/rsprogramminginth/matrix/: Cargo.toml
rust/rsprogramminginth/maxsequence/: Cargo.toml
rust/rsprogramminginth/memcham/: Cargo.toml
rust/rsprogramminginth/minmax/: Cargo.toml
rust/rsprogramminginth/modulo/: Cargo.toml
rust/rsprogramminginth/nugget/: Cargo.toml
rust/rsprogramminginth/oddorprime/: Cargo.toml
rust/rsprogramminginth/okviri/: Cargo.toml
rust/rsprogramminginth/overtree/: Cargo.toml
rust/rsprogramminginth/palindome/: Cargo.toml
rust/rsprogramminginth/plate/: Cargo.toml
rust/rsprogramminginth/roman/: Cargo.toml
rust/rsprogramminginth/sevensegment/: Cargo.toml
rust/rsprogramminginth/silly-bake/: Cargo.toml
rust/rsprogramminginth/skyline/: Cargo.toml
rust/rsprogramminginth/tertis2/: Cargo.toml
rust/rsprogramminginth/tetis3/: Cargo.toml
rust/rsprogramminginth/wc_new/: Cargo.toml
rust/rsprogramminginth/wordchain/: Cargo.toml
rust/rsprogramminginth/wordsecond/: Cargo.toml
rust/rsprogramminginth/x1x2/: Cargo.toml
(+427 files in other folders)
