[workspace]
resolver = "1"
members = [
	"AplusB",
	"brick",
	"circle_in_square",
	"fptrick",
	"grading",
	"lightflight",
	"matrix",
	"maxsequence",
	"memcham",
	"minmax",
	"modulo",
	"nugget",
	"Ochafood",
	"oddorprime",
	"okviri",
	"overtree",
	"palindome",
	"plate",
	"roman",
	"tertis2",
	"tetis3",
	"Toppykung",
	"wc_new",
	"wordchain",
	"wordsecond",
	"x1x2"
, "dice", "bee", "skyline", "sevendwraves"]
exclude = []
